# KTpp

./: .gitignore  CMakeLists.txt  KTpp.cpp  KTpp.sln  KTpp.vcxproj  KTpp.vcxproj.filters  Lexer.cpp  Lexer.h  README.md  Token.h  index.js  main.cpp  spec.md
Diagnostics/src/: CMakeLists.txt
Diagnostics/src/Diagnostics/: Diagnostics.cpp  Diagnostics.hh
Diagnostics/test/: CMakeLists.txt  Diagnostics_test_emit.cpp
Lexer/src/: CMakeLists.txt
Lexer/src/Lexer/: Lexer.cpp  Lexer.hh  Token.hh
Lexer/test/: CMakeLists.txt  Lexer_test.cpp  Lexer_test_expr.cpp  Lexer_test_identifier.cpp  Lexer_test_keyword.cpp  Lexer_test_numbers.cpp  Lexer_test_operator.cpp  Lexer_test_others.cpp  Lexer_test_string.cpp  helpers.cc  helpers.hh
Logger/src/: CMakeLists.txt
Logger/src/Logger/: Logger.cpp  Logger.hh
Logger/test/: CMakeLists.txt  Logger_test_log.cpp
Parser/src/: CMakeLists.txt
Parser/src/Parser/: Expr.cpp  Expr.hh  Parser.cpp  Parser.hh  Stmt.hh
Parser/test/: CMakeLists.txt  Parser_test_for.cpp
